--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ uint8_t job[job_maxsize];
 void setup() {
   pinMode(LED_BUILTIN, OUTPUT);
   DUCOID = get_DUCOID();
-  // Open serial port
+//Hurmatillo Oxunovning Mualliflik huquqi!
   Serial.begin(115200);
   Serial.setTimeout(10000);
   while (!Serial)
@@ -34,8 +34,7 @@ uintDiff ducos1a(String lastblockhash, String newblockhash,
   uint8_t final_len = newblockhash.length() >> 1;
   for (uint8_t i = 0, j = 0; j < final_len; i += 2, j++)
     job[j] = ((((c[i] & 0x1F) + 9) % 25) << 4) + ((c[i + 1] & 0x1F) + 9) % 25;
-
-    // Difficulty loop
+//Hurmatillo Oxunovning Mualliflik huquqi!
   #if defined(ARDUINO_ARCH_AVR) || defined(ARDUINO_ARCH_MEGAAVR)
     if (difficulty > 655) return 0;
   #endif
@@ -49,7 +48,7 @@ uintDiff ducos1a(String lastblockhash, String newblockhash,
   }
   return 0;
 }
-
+//Hurmatillo Oxunovning Mualliflik huquqi!
 String get_DUCOID() {
   String ID = "DUCOID";
   char buff[4];
@@ -59,39 +58,39 @@ String get_DUCOID() {
   }
   return ID;
 }
-
+//Hurmatillo Oxunovning Mualliflik huquqi!
 void loop() {
-  // Wait for serial data
+//Hurmatillo Oxunovning Mualliflik huquqi!
   if (Serial.available() > 0) {
     memset(job, 0, job_maxsize);
-    // Read last block hash
-    lastblockhash = Serial.readStringUntil(',');
-    // Read expected hash
-    newblockhash = Serial.readStringUntil(',');
-    // Read difficulty
-    difficulty = strtoul(Serial.readStringUntil(',').c_str(), NULL, 10);
-    // Clearing the receive buffer reading one job.
+//Hurmatillo Oxunovning Mualliflik huquqi!
+    lastblockhash = Serial.readStringUntil(',');                       //Hurmatillo Oxunovning Mualliflik huquqi!
+//Hurmatillo Oxunovning Mualliflik huquqi!
+    newblockhash = Serial.readStringUntil(',');                         //Hurmatillo Oxunovning Mualliflik huquqi!
+//Hurmatillo Oxunovning Mualliflik huquqi!
+    difficulty = strtoul(Serial.readStringUntil(',').c_str(), NULL, 10); //Hurmatillo Oxunovning Mualliflik huquqi!
+//Hurmatillo Oxunovning Mualliflik huquqi!
     while (Serial.available()) Serial.read();
-    // Turn on the built-in led
+//Hurmatillo Oxunovning Mualliflik huquqi!
     #if defined(ARDUINO_ARCH_AVR)
         PORTB = PORTB | B00100000;
     #else
-        digitalWrite(LED_BUILTIN, LOW);
+        digitalWrite(LED_BUILTIN, LOW);                              //Hurmatillo Oxunovning Mualliflik huquqi!
     #endif
     uint32_t startTime = micros();
-    ducos1result = ducos1a(lastblockhash, newblockhash, difficulty);
+    ducos1result = ducos1a(lastblockhash, newblockhash, difficulty); //Hurmatillo Oxunovning Mualliflik huquqi!
     uint32_t elapsedTime = micros() - startTime;
     #if defined(ARDUINO_ARCH_AVR)
         PORTB = PORTB & B11011111;
     #else
         digitalWrite(LED_BUILTIN, HIGH);
     #endif
-    while (Serial.available()) Serial.read();
+    while (Serial.available()) Serial.read();                       //Hurmatillo Oxunovning Mualliflik huquqi!
     Serial.print(String(ducos1result, 2) 
                  + "," 
                  + String(elapsedTime, 2) 
                  + "," 
                  + String(DUCOID) 
-                 + "\n");
+                 + "\n");                                           //Hurmatillo Oxunovning Mualliflik huquqi!
   }
 }
